--- a/dist.ini
+++ b/dist.ini
@@ -4,6 +4,11 @@ license = Perl_5
 copyright_holder = Adam Stokes
 copyright_year   = 2014
 
+[NextRelease]
+filename=Changes
+format=%-7v %{yyyy-MM-dd}d
+time_zone=UTC
+
 [Git::NextVersion]
 [Git::Check]
 [Git::Commit]
